<resources>
    <string name="app_name">FragmentApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="result_will_be_displayed_here">Result will be displayed here</string>
    <string name="enter_text">Enter password</string>
    <string name="ok">OK</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="data_from_storage">Data from Storage</string>
    <string name="open">Open</string>
    <string name="back">Back</string>
    <string name="storage_is_empty">Storage is empty</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
</resources>