<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="52dp"
        android:hint="@string/enter_text" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start">

        <RadioButton
            android:id="@+id/radioShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="52dp"
        android:text="@string/ok" />
</LinearLayout>

